--- a/1 - Regression/linear_regression.ipynb
+++ b/1 - Regression/linear_regression.ipynb
@@ -384,10 +384,10 @@
    "source": [
     "#TODO : setup the derivative of the loss function\n",
     "def derivative_w(x, y, y_pred):\n",
-    "    ... # 1 line of code\n",
+    "    return 2 * x * (y_pred - y)\n",
     "\n",
     "def derivative_b(y, y_pred):\n",
-    "    ... # 1 line of code\n",
+    "    return 2 * (y_pred - y)\n",
     "\n",
     "def derivative(x, y, y_pred):\n",
     "    return (derivative_w(x, y, y_pred), derivative_b(y, y_pred))\n",
@@ -395,13 +395,14 @@
     "\n",
     "# Print the result of the derivative\n",
     "for x, y in train_set:\n",
-    "    ... # here\n",
-    "    derivative_weight, derivative_bias = ... # here\n",
+    "    y_pred = forward(x)  # ✅ store it\n",
+    "    derivative_weight, derivative_bias = derivative(x, y, y_pred)  # ✅ use it\n",
     "\n",
-    "    print(f\"x: {x} ; y: {y} -> y_pred: {y_pred:.3f} | Derivative Weight: {derivative_weight:.3f} | Derivative Bias: {derivative_bias:.3f}\")\n",
-    "    # save the derivatives for after \n",
-    "    dw_values = [derivative_w(x, y, forward(x)) for x, y in train_set]\n",
-    "    db_values = [derivative_b(y, forward(x)) for x, y in train_set]"
+    "    print(f\"x: {x} ; y: {y} -> y_pred: {y_pred:.3f} | \"\n",
+    "          f\"Derivative Weight: {derivative_weight:.3f} | \"\n",
+    "          f\"Derivative Bias: {derivative_bias:.3f}\")\n",
+    "dw_values = [derivative_w(x, y, forward(x)) for x, y in train_set]\n",
+    "db_values = [derivative_b(y, forward(x)) for x, y in train_set]"
    ]
   },
   {
@@ -481,11 +482,13 @@
    "outputs": [],
    "source": [
     "#TODO: Update the weight and bias\n",
-    "LEARNING_RATE = ...\n",
+    "LEARNING_RATE = 0.01\n",
     "\n",
-    "w -= ...\n",
-    "b -= ...\n",
+    "dw = sum(dw_values) / len(train_set)\n",
+    "db = sum(db_values) / len(train_set)\n",
     "\n",
+    "w -= LEARNING_RATE * dw\n",
+    "b -= LEARNING_RATE * db\n",
     "print(\"Updated Weight:\", w)\n",
     "print(\"Updated Bias:\", b)\n",
     "\n",
