--- a/1 - Regression/linear_regression.ipynb
+++ b/1 - Regression/linear_regression.ipynb
@@ -560,16 +560,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#TODO: Train the model\n",
+    "# TODO: Train the model\n",
     "\n",
-    "epochs = ...\n",
-    "learning_rate = ...\n",
+    "epochs = 200\n",
+    "learning_rate = 0.01\n",
     "\n",
+    "for epoch in range(epochs):\n",
+    "    total_loss = 0.0\n",
     "\n",
-    "for ... :\n",
-    "    for ... :\n",
-    "    # ~ 5 lines to code \n",
-    "    print(f\"Epoch: {epoch}, Loss: {loss:.5f}\")\n",
+    "    for x, y in train_set:\n",
+    "        # 1) forward\n",
+    "        y_pred = forward(x)\n",
+    "\n",
+    "        # 2) loss\n",
+    "        loss = squared_error(y, y_pred)\n",
+    "        total_loss += loss\n",
+    "\n",
+    "        # 3) derivatives (gradients)\n",
+    "        dw, db = derivative(x, y, y_pred)\n",
+    "\n",
+    "        # 4) update parameters\n",
+    "        w -= learning_rate * dw\n",
+    "        b -= learning_rate * db\n",
+    "\n",
+    "    # mean loss over the dataset\n",
+    "    avg_loss = total_loss / len(train_set)\n",
+    "    print(f\"Epoch: {epoch}, Loss: {avg_loss:.5f}\")\n",
     "\n",
     "print(\"Final Weight:\", w)\n",
     "print(\"Final Bias:\", b)"
