--- a/1 - Regression/logistic_regression.ipynb
+++ b/1 - Regression/logistic_regression.ipynb
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +153,7 @@
     "\n",
     "#TODO: Define the sigmoid function (use pow)\n",
     "def sigmoid(x):\n",
-    "    ...\n",
+    "    return 1 / (1 + pow(e, -x))\n",
     "\n",
     "assert sigmoid(1) > 0.73 and sigmoid(1) < 0.74, \"Sigmoid is not correct\""
    ]
@@ -166,11 +166,11 @@
    "source": [
     "#TODO : Define the forward function -> neuron function\n",
     "def forward(x):\n",
-    "    ...\n",
+    "    return sigmoid(w * x + b)\n",
     "\n",
     "#TODO: Test the forward function\n",
     "for x, y in train_set:\n",
-    "    y_pred = ...\n",
+    "    y_pred = forward(x)\n",
     "    print(\"Prediction:\", y_pred, \"Actual:\", y)\n"
    ]
   },
@@ -238,12 +238,12 @@
     "def binary_cross_entropy_loss(y, y_pred):\n",
     "    # We clamp the prediction value to avoid log(0)\n",
     "    y_pred_clamped = max(min(y_pred, 1 - eps), eps)\n",
-    "    ...\n",
+    "    return -(y * log(y_pred_clamped) + (1 - y) * log(1 - y_pred_clamped))\n",
     "\n",
     "#TODO: Test the binary cross entropy loss function\n",
     "for x, y in train_set:\n",
-    "    ...\n",
-    "    error = ...\n",
+    "    y_pred = forward(x)\n",
+    "    error = binary_cross_entropy_loss(y, y_pred)\n",
     "    print(\"Error:\", error)"
    ]
   },
@@ -276,17 +276,17 @@
    "source": [
     "#TODO setup the derivative of the loss function \n",
     "def derivative_w(x, y, y_pred):\n",
-    "    ...\n",
+    "    return (y_pred - y) * x\n",
     "\n",
     "def derivative_b(y, y_pred):\n",
-    "    ...\n",
+    "    return (y_pred - y)\n",
     "\n",
     "def derivative(x, y, y_pred):\n",
     "    return (derivative_w(x, y, y_pred), derivative_b(y, y_pred))\n",
     "\n",
     "for x, y in train_set:\n",
-    "    ...\n",
-    "    derivative_weight, derivative_bias = ...\n",
+    "    y_pred = forward(x)\n",
+    "    derivative_weight, derivative_bias = derivative(x, y, y_pred)\n",
     "\n",
     "    print(f\"x: {x}, y: {y}, y_pred: {y_pred:.3f}, Derivative Weight: {derivative_weight:.3f}, Derivative Bias: {derivative_bias:.3f}\")\n",
     "    # Plot the derivatives\n",
@@ -353,14 +353,25 @@
    "source": [
     "#TODO: Train the model\n",
     "\n",
-    "epochs = ...\n",
-    "learning_rate = ...\n",
+    "epochs = 2000\n",
+    "learning_rate = 0.1\n",
     "\n",
+    "for epoch in range(epochs):\n",
+    "    total_loss = 0.0\n",
     "\n",
-    "for ... :\n",
-    "    for ... :\n",
-    "    # ~ Also 5 lines to code \n",
-    "    print(f\"Epoch: {epoch}, Loss: {loss:.5f}\")\n",
+    "    for x, y in train_set:\n",
+    "        y_pred = forward(x)\n",
+    "\n",
+    "        total_loss += binary_cross_entropy_loss(y, y_pred)\n",
+    "\n",
+    "        dw, db = derivative(x, y, y_pred)\n",
+    "\n",
+    "        w -= learning_rate * dw\n",
+    "        b -= learning_rate * db\n",
+    "\n",
+    "    loss = total_loss / len(train_set)\n",
+    "    if epoch % 100 == 0:\n",
+    "        print(f\"Epoch: {epoch}, Loss: {loss:.5f}\")\n",
     "\n",
     "print(\"Final Weight:\", w)\n",
     "print(\"Final Bias:\", b)"
